@@ -2,7 +2,7 @@ toolbar_DATA =  unsortedList.xpm enumList.xpm table.xpm sub.xpm super.xpm \
 	borderbottom.xpm borderleft.xpm borderright.xpm bordertop.xpm \
 	run_bounding.xpm run_contur.xpm run_not.xpm \
 	editframetool.xpm edittool.xpm picframetool.xpm textframetool.xpm \
-	formula.xpm char.xpm
+	formula.xpm char.xpm return.xpm
 
 toolbardir = $(kde_datadir)/kword/toolbar
 
