@@ -1,0 +1,19 @@
+/* XPM */
+static char * return_xpm[] = {
+"11 14 2 1",
+" 	c none",
+".	c blue",
+"          .",
+"          .",
+"          .",
+"          .",
+"          .",
+"          .",
+"          .",
+"   .      .",
+"  ..      .",
+" ...      .",
+"...........",
+" ...       ",
+"  ..       ",
+"   .       "};
